fixed minimap overflow issue

--- a/ui/src/app/pages/servers/servers.component.scss
+++ b/ui/src/app/pages/servers/servers.component.scss
@@ -9,3 +9,11 @@
     display: inline-block;
 }
     
+.card-overflow {
+    overflow: hidden;
+}
+
+.minimap {
+    max-width: 100%;
+    max-height: 100%;
+}
